<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movies"
    android:orientation="vertical"
    tools:context="com.nanodregree.arthurmunhoz.famousmovies.activities.DetailedMovieActivity">

    <TextView
        android:id="@+id/tv_swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv_swipeArrow"
        android:text="@string/swipe_to_reload"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_swipeArrow"
        android:layout_width="42dp"
        android:layout_height="62dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/swipe_arrow"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_progressBar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_waitMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pb_progressBar"
        android:layout_marginTop="16dp"
        android:text="@string/wait_for_details_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />


    <ScrollView
        android:id="@+id/sv_scrollContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_contentHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/gradient_background"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/star"
                android:elevation="10dp" />

            <com.mostafaaryan.transitionalimageview.TransitionalImageView
                android:id="@+id/iv_moviePoster"
                android:layout_width="160dp"
                android:layout_height="220dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-40dp"
                android:adjustViewBounds="true"
                android:background="@drawable/carregando_poster"
                android:elevation="20dp"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tv_clickToEnlarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:alpha="0.5"
                android:text="@string/click_to_enlarge"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/ll_contentFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="70"
                android:background="@layout/rounded_rectangle_background"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <!-- *****************************
                             TÍTULO
                ****************************** -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_movieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold" />


                <!--
                        SEPARATOR
                -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white" />

                <!-- *****************************
                             GENEROS
                ****************************** -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/genre"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tv_movieGenre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <!--
                            SIDE       BY     SIDE
                -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <!-- *****************************
                                    POPULARIDADE
                        ****************************** -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:paddingStart="16dp"
                            android:text="@string/popularity"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tv_moviePopularity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="16dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <!-- *****************************
                                    VOTOS
                        ****************************** -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:paddingStart="8dp"
                            android:text="@string/votes"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tv_movieVoteCount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="8dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>
                </LinearLayout>


                <!--
                            SIDE       BY     SIDE
                -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <!-- *****************************
                                        DURAÇÃO
                        ****************************** -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:paddingStart="16dp"
                            android:text="@string/duration"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tv_movieDuration"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="16dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <!-- *****************************
                                    LAMÇAMENTO
                        ****************************** -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:paddingStart="8dp"
                            android:text="Lançamento"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tv_movieReleaseDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="8dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>
                </LinearLayout>

                <!--
                        SEPARATOR
                -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white">

                </LinearLayout>

                <!-- *****************************
                             SINOPSE
                ****************************** -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="16dp"
                    android:text="Sinopse"
                    android:textAlignment="center"
                    tools:ignore="RtlSymmetry" />

                <com.otaliastudios.zoom.ZoomImageView
                    android:id="@+id/iv_frameBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:maxZoom="4"
                    app:maxZoomType="realZoom"
                    app:minZoom="1"
                    app:minZoomType="realZoom"
                    app:overPinchable="true"
                    app:overScrollHorizontal="false"
                    app:overScrollVertical="false" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="13dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="-20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:alpha="0.4"
                        android:background="@drawable/arrow_left"
                        android:backgroundTint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="11dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:alpha="0.4"
                        android:gravity="center"
                        android:text="@string/slide_to_zoom"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:alpha="0.4"
                        android:background="@drawable/arrow_right"
                        android:backgroundTint="@color/white" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_movieOverview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="\nImpulsionado pela restauração de sua fé na humanidade e inspirado pelo ato altruísta do Superman (Henry Cavill), Bruce Wayne (Ben Affleck) convoca sua nova aliada Diana Prince (Gal Gadot) para o combate contra um inimigo ainda maior, recém-despertado. Juntos, Batman e Mulher-Maravilha buscam e recrutam com agilidade um time de meta-humanos, mas mesmo com a formação da liga de heróis sem precedentes - Batman, Mulher-Maraviha, Aquaman (Jason Momoa), Cyborg (Ray Fisher) e Flash (Ezra Miller) -, poderá ser tarde demais para salvar o planeta de um catastrófico ataque."
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />


                <!--
                        SEPARATOR
                -->
                <LinearLayout
                    android:id="@+id/separator_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white"
                    android:orientation="horizontal">
                </LinearLayout>

                <!-- *****************************
                             TRAILERS
                ****************************** -->
                <TextView
                    android:id="@+id/tv_trailers_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="16dp"
                    android:text="Trailers"
                    android:textAlignment="center"
                    tools:ignore="RtlSymmetry" />

                <HorizontalScrollView
                    android:id="@+id/hsv_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp">

                    <LinearLayout
                        android:id="@+id/ll_trailers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                </HorizontalScrollView>

                <!--
                        SEPARATOR
                -->
                <LinearLayout
                    android:id="@+id/separator_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white"
                    android:orientation="horizontal">
                </LinearLayout>

                <!-- *****************************
                             REVIEWS
                ****************************** -->
                <TextView
                    android:id="@+id/tv_reviews_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="16dp"
                    android:text="Avaliações"
                    android:textAlignment="center"
                    tools:ignore="RtlSymmetry" />

                <HorizontalScrollView
                    android:id="@+id/hsv_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp">

                    <LinearLayout
                        android:id="@+id/ll_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                </HorizontalScrollView>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>